H5页面demo增加新页面跳转

--- a/app/src/main/assets/local_page.html
+++ b/app/src/main/assets/local_page.html
@@ -115,6 +115,11 @@
             <p id="cameraStatus"></p>
         </div>
     </div>
+
+    <div class="section">
+        <h3>页面导航测试</h3>
+        <a href="new_page.html"><button>跳转到新页面</button></a>
+    </div>
 </div>
 
 <script>
